RT-Ticket: 9648 RT-Status: resolved RT-Update: correspond CSS Style updates for combo boxes
r32815@31b:  jesse | 2008-06-13 12:19:04 -0400
Improve rendering of comboboxes.

    Tested on: Mac Firefox 3.0rc2, Mac Firefox 2.0.0.14, Mac Safari 3, Mac Opera 9.2, Mac Opera 9.5, Windows IE 6, Windows IE 7.

r32821@31b:  jesse | 2008-06-13 13:30:11 -0400
3 hours of time isn't too much to spend on aligning four buttons across six browsers, right?
r32822@31b:  jesse | 2008-06-13 13:38:04 -0400
"And opera, too!"

git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/branches/3.8-TESTING@13284 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/3.4-compat/forms.css
+++ b/share/html/NoAuth/css/3.4-compat/forms.css
@@ -72,6 +72,7 @@ form .label, form label {
 %# ComboBox styles... some properties like height and width must be dynamically
 %# set in the JS (at least for now).
 .combobox {
+    position: relative;
     border: 2px inset ButtonHighlight;
     padding-left: 0.5em;
     padding-bottom: 0.1em;
